# anonymous_namespace_test

./: CMakeLists.txt  main.cpp
secondlib/: CMakeLists.txt  MyLibConfig.cmake.in  main.cpp
secondlib/include/: mylib.h
